<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditReviewView">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/edit_review"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="16dp" />

            <EditText
                android:id="@+id/review_comment"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:hint="@string/comment"
                android:inputType="textMultiLine" />

            <EditText
                android:id="@+id/review_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/rating_0_10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/review_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/review_date"
                android:inputType="date" />

            <CheckBox
                android:id="@+id/review_recommended"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recommended" />

            <CheckBox
                android:id="@+id/review_spoiler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contains_spoilers" />

            <Button
                android:id="@+id/button_update_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="updateReview"
                android:text="@string/update" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>