<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.RegisterMovieView">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <EditText
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/movie_title"
            android:inputType="text" />

        <EditText
            android:id="@+id/movie_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/synopsis"
            android:inputType="text" />

        <EditText
            android:id="@+id/movie_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/genre"
            android:inputType="text" />

        <EditText
            android:id="@+id/movie_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/release_date"
            android:inputType="date" />

        <EditText
            android:id="@+id/movie_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/duration"
            android:inputType="number|numberSigned" />

        <EditText
            android:id="@+id/movie_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/rating_0_10"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/movie_studio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" />

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="377dp"
            android:layout_height="308dp"
            android:onClick="selectImage"
            android:scaleType="centerCrop"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="registerMovie"
            android:text="@string/register" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>