<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:key="language"
        android:title="@string/language"
        android:entries="@array/language_entries"
        android:entryValues="@array/language_values"
        android:defaultValue="es"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:key="theme"
        android:title="@string/theme"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        android:defaultValue="2"
        app:useSimpleSummaryProvider="true" />

    <ListPreference
        android:key="sort_by"
        android:title="@string/sort_movies_by"
        android:entries="@array/sort_entries"
        android:entryValues="@array/sort_values"
        android:defaultValue="0"
        app:useSimpleSummaryProvider="true" />

</PreferenceScreen>